2006-06-04  Paolo Carlini  <pcarlini@suse.de>

PR libstdc++/27867
	* include/bits/valarray_before.h (struct _BinClos<_Oper, _ValArray,
	_ValArray, _Tp, _Tp>): Fix value_type typedef.
	* testsuite/26_numerics/valarray/27867.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114356 138bc75d-0d04-0410-961f-82ee72b054a4